--- a/data/app-configs.json
+++ b/data/app-configs.json
@@ -1,6 +1,6 @@
 {
     "production_latest_version":"1.1.5",
     "registration":"true",
-    "app_secret":"myappsecret",
+    "app_secret":"mysecretapp",
     "ios_update_link":"1.0.1"
 }
