--- a/data/app-configs.json
+++ b/data/app-configs.json
@@ -2,5 +2,6 @@
     "production_latest_version":"1.1.5",
     "registration":"true",
     "app_secret":"mysecretapp",
+    "APP_SECRET":"mysecretapp",
     "ios_update_link":"1.0.1"
 }
